fix: more contrast between background/text

--- a/src/templates/hero/hero.css
+++ b/src/templates/hero/hero.css
@@ -36,7 +36,7 @@
      bottom: 0px;
      left: 0px;
      background-color: var(--illini-blue);
-     opacity: 0.8;
+     opacity: 0.9;
  }
  
  #texture_img{
